fix grid collapse on action menu and video in tour view

--- a/ui/analyse/css/study/relay/_layout.scss
+++ b/ui/analyse/css/study/relay/_layout.scss
@@ -29,6 +29,12 @@ main.is-relay {
     .mchat {
       flex: 1 1 50%;
     }
+
+    &.wide .spacer {
+      // empty div used to maximize grid container sizing of rightmost column(s)
+      width: 9999px;
+      visibility: hidden;
+    }
   }
 }
 
@@ -61,15 +67,16 @@ main.is-relay.has-relay-tour {
 
   @include mq-at-least-col3 {
     grid-template-columns: $col3-uniboard-side $analyse-block-gap var(--col3-uniboard-width) $analyse-block-gap $col3-uniboard-table;
-    &.wide {
-      grid-template-columns: $col3-uniboard-side $analyse-block-gap var(--col3-uniboard-width) $analyse-block-gap auto;
-    }
-    grid-template-rows: repeat(2, $mq-col3-side-height / 2);
+    grid-template-rows: repeat(2, calc($mq-col3-side-height / 2));
     grid-template-areas:
       'side        . relay-tour relay-tour relay-tour'
       'chat        . relay-tour relay-tour relay-tour'
       'uchat       . relay-tour relay-tour relay-tour'
       'relay-admin . relay-tour relay-tour relay-tour';
+
+    &.wide {
+      grid-template-columns: $col3-uniboard-side $analyse-block-gap 1fr;
+    }
   }
 }
 
@@ -105,10 +112,11 @@ main.analyse.is-relay:not(.has-relay-tour) {
   }
 
   @include mq-at-least-col3 {
-    grid-template-rows: var(--cg-height) 2.5em;
+    grid-template-rows: calc(var(--cg-height) * 0.6) calc(var(--cg-height) * 0.4) 2.5em fit-content(0);
     grid-template-areas:
       'side        . board gauge tools'
-      'side        . board .     controls'
+      'chat        . board gauge tools'
+      'chat        . board .     controls'
       'chat        . under under under'
       'uchat       . under under under'
       'relay-admin . under under under';
@@ -127,8 +135,8 @@ main.analyse.is-relay:not(.has-relay-tour) {
       flex: 5 0 30%;
     }
 
-    // wide is a class not a media query as it involes the queryBody() calculation in relayView.ts
     &.wide {
+      grid-template-rows: var(--cg-height) 2.5em;
       grid-template-columns: $col3-uniboard-side $analyse-block-gap var(--col3-uniboard-width) $analyse-block-gap 1fr 1fr;
       grid-template-areas:
         'side        . board gauge tools    chat'
@@ -171,7 +179,7 @@ main.analyse.is-relay:not(.has-relay-tour) {
         'side        . board .     controls uchat'
         'side        . under under under    under'
         'relay-admin . under under under    under';
-      .analyse__tols {
+      .analyse__tools {
         margin-top: 0;
       }
 
